--- a/src/view/Agenda_Atendente.fxml
+++ b/src/view/Agenda_Atendente.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -56,7 +57,7 @@
                   <Font name="Impact" size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="50.0" />
                </VBox.margin>
             </Label>
             <ComboBox prefWidth="150.0">
@@ -69,7 +70,7 @@
                   <Font name="Impact" size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="50.0" />
                </VBox.margin>
             </Label>
             <Label text="Paciente">
@@ -125,15 +126,30 @@
                   <TableColumn prefWidth="174.0" text="Paciente" />
                   <TableColumn minWidth="0.0" prefWidth="132.0" text="Médico" />
                </columns>
-            </TableView>
-            <Button fx:id="btn_return" mnemonicParsing="false" onAction="#loadAtendenteView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets bottom="10.0" />
                </VBox.margin>
-            </Button>
+            </TableView>
+            <HBox prefHeight="13.0" prefWidth="595.0">
+               <children>
+                  <Button fx:id="loadCRUD_ConsultaView" mnemonicParsing="false" onAction="#loadCRUD_AgendaView" prefWidth="300.0" text="Gerenciar consultas">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btn_return" mnemonicParsing="false" onAction="#loadAtendenteView" prefWidth="300.0" text="Retornar">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="100.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
          <BorderPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
