--- a/bin/view/CRUD_Funcionario.fxml
+++ b/bin/view/CRUD_Funcionario.fxml
@@ -147,8 +147,8 @@
             </HBox>
             <TableView fx:id="tableFuncionario">
                <columns>
-                  <TableColumn prefWidth="349.0" text="Nome" />
-                  <TableColumn minWidth="0.0" prefWidth="183.0" text="Código" />
+                  <TableColumn fx:id="nomeCol" prefWidth="349.0" text="Nome" />
+                  <TableColumn fx:id="codCol" minWidth="0.0" prefWidth="183.0" text="Código" />
                </columns>
                <VBox.margin>
                   <Insets top="10.0" />
