--- a/bin/view/Agenda_Atendente.fxml
+++ b/bin/view/Agenda_Atendente.fxml
@@ -11,10 +11,11 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="agendaPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Agenda_Admin">
+<BorderPane fx:id="agendaPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Agenda_Atendente">
    <left>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -38,7 +39,7 @@
                         <Font size="16.0" />
                      </font>
                   </RadioButton>
-                  <RadioButton mnemonicParsing="false" selected="true" text="Tabela">
+                  <RadioButton mnemonicParsing="false" text="Tabela">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -56,7 +57,7 @@
                   <Font name="Impact" size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="50.0" />
                </VBox.margin>
             </Label>
             <ComboBox prefWidth="150.0">
@@ -69,7 +70,7 @@
                   <Font name="Impact" size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="50.0" />
                </VBox.margin>
             </Label>
             <Label text="Paciente">
@@ -125,15 +126,30 @@
                   <TableColumn prefWidth="174.0" text="Paciente" />
                   <TableColumn minWidth="0.0" prefWidth="132.0" text="Médico" />
                </columns>
-            </TableView>
-            <Button fx:id="btn_return" mnemonicParsing="false" onAction="#loadAdministradorView" prefHeight="25.0" prefWidth="322.0" text="Retornar">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets bottom="10.0" />
                </VBox.margin>
-            </Button>
+            </TableView>
+            <HBox prefHeight="13.0" prefWidth="595.0">
+               <children>
+                  <Button fx:id="loadCRUD_ConsultaView" mnemonicParsing="false" onAction="#loadCRUD_AgendaView" prefWidth="300.0" text="Gerenciar consultas">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btn_return" mnemonicParsing="false" onAction="#loadAtendenteView" prefWidth="300.0" text="Retornar">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="100.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
          <BorderPane.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
